<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">安卓课堂点名系统</string>
    <string name="about_text">安卓课堂点名系统 \n version: 1.0.0</string>
    
      
   <string name="refresh">刷新</string>
    
    <string name="inputAccHint">输入帐号</string>
	<string name="accInputLabel">帐        号：</string>
    <string name="strPswInputLabel">密        码：</string>
    
      <string name="main_btn_open">打开</string>
    <string name="main_btn_setting">设定</string>
    <string name="main_btn_exit">退出</string> 
     
	<string name="idropw_null">帐号或密码不能为空</string>
	<string name="idropw_error">帐号或密码错误，请注意大小写。</string>
	<string name="phrocn_null">手机号或验证码不能为空</string>
	<string name="register">注册</string>
	<string name="register_success">注册完成，请注意查收手机短信。</string>
	<string name="register_error">手机号已注册过</string>
	<string name="register_account">注册帐号</string>
	<string name="net_setting">网络设置</string>
	<string name="help">帮助</string>
	<string name="help_text">帮助</string>
	<string name="about">关于</string>
	<string name="exitapp">退出程序</string>
	<string name="comfirm_exit_title">确认退出</string>
	<string name="confirm_exit">确定退出程序？</string>
	<string name="str_ok">确定</string>
	<string name="str_back">返回</string>
	<string name="str_yes">是</string>
	<string name="str_no">否</string>
	<string name="alter_password">修改密码</string>
	<string name="eminimize">最小化</string>
	
    <string name="opt_remember">保存密码</string>
	<string name="nolink_login">离线登录</string>
    <string name="auto_login">自动登录</string>
	<string name="cancle">取消</string>
	<string name="finish">完成</string>

	<string name="menu_settings">设置</string>
	<string name="set">设置</string>
	<string name="message_set">消息设置</string>
	<string name="quiet">开启上课自动静音</string>
	<string name="remind">开启课前振动提醒</string>
	<string name="about_app">软件相关</string>
	<string name="revision">版本支持</string>
	<string name="us">关于作者</string>
	<string name="heading">课表信息</string>
	<string name="exit">返回</string>
	<string name="back">返回</string>
	<string name="edit_title">课程信息</string>
	<string name="course_name">课程名称：</string>
	<string name="course_address">教室地点：</string>
	<string name="course_teacher">老师姓名：</string>
	<string name="course_amount">上课节数：</string>
	<string name="course_week">上课周数：</string>
	<string name="course_time">上课时间：</string>
	<string name="input_course_name">请输入课程名称</string>
	<string name="input_course_address">请输入教室地点</string>
	<string name="input_course_teacher">请输入老师姓名</string>
	<string name="input_course_week">总周数或单双周</string>
	<string name="input_course_jieshu">总节数不超过4</string>
	<string name="to">至</string>
	<string name="jieshulimit">1 2 3 4</string>

</resources>
